# test_curl

./: .gitignore  CMakeLists.txt  common.pri  global.h  qml_currency.pro
Currency_data_plugin/: CurrencyData.cpp  CurrencyData.h  CurrencyDataSet.cpp  CurrencyDataSet.h  Currency_data_plugin.pro  EnumProvider.h  currcplugin.cpp  currcplugin.h  currencyfiltermodel.cpp  currencyfiltermodel.h  model.cpp  model.h  qmldir  res.qrc  settings.cpp  settings.h
Loader/: Loader.pro  global.h
Loader/src/: loader.cpp  loader.h  loader_curl.cpp  loader_private_qt.h  loader_qt.cpp  main.cpp
qml2_app/: CInputEdit.qml  CLineEdit.qml  CListView.qml  CMainList.qml  MainListHelper.js  TestComponent.qml  TestElement.qml  deployment.pri  main.cpp  main.qml  main_abstrmdl.qml  q1Loader.qml  q2Loader.qml  qml.qrc  qml2_app.pro
qml2_app/Deployment/: metadata.desktop  qmlviewer.sh
qml2_app/qml/: CInputEdit.qml  CListView.qml  CMainList.qml  CMainList1Delegate.qml  CMainList2Delegate.qml  JustTest.qml  MainListHelper.js  SettingsPanel.qml  q1Loader.qml  q2Loader.qml
qml2_app/qml/SettingsPanel/: SettingsButton.qml
src/: loader.cpp  loader.h  main.cpp
